<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/application_background"
    android:textSize="18sp">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context="org.fptn.vpn.views.HomeActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="80dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <!--Don't remove this layout! - all will change position when hidden-->
                <LinearLayout
                    android:id="@+id/home_permission_warning_frame"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/home_permission_warning_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/warning" />

                    <TextView
                        android:layout_marginStart="10dp"
                        android:textAlignment="center"
                        android:id="@+id/home_permission_warning_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/permission_warning_text"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <!--Don't remove this layout! - all will change position when hidden-->
                <LinearLayout
                    android:id="@+id/home_connection_timer_frame"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/home_connection_timer_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/connection_time"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/home_connection_timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero_time"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

            <!-- Toggle button -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ToggleButton
                    android:id="@+id/home_do_connect_button"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:background="@drawable/toggle_button"
                    android:text=""
                    android:textOff=""
                    android:textOn="" />
            </LinearLayout>

            <!--- Status -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/home_connection_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/state_disconnect"
                    android:textColor="@color/yellow" />
            </LinearLayout>

            <!-- Server -->
            <LinearLayout
                android:id="@+id/home_server_info_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/server_label"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/home_connected_server_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Estonia (127.0.0.1)"
                    android:textColor="@color/white"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <!-- Speed status -->
            <LinearLayout
                android:id="@+id/home_speed_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/round_settings_back_white10_20"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginEnd="10dp"
                        app:srcCompat="@drawable/download" />

                    <TextView
                        android:id="@+id/home_download_speed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end|center_vertical"
                        android:paddingEnd="10dp"
                        android:text="0 Mb/s"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/home_upload_speed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical"
                        android:paddingLeft="10dp"
                        android:text="0 Mb/s"
                        android:textColor="@color/white" />

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="Download Icon"
                        app:srcCompat="@drawable/upload" />
                </LinearLayout>
            </LinearLayout>

            <!-- Spinner -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp"
                tools:ignore="MissingConstraints">

                <org.fptn.vpn.utils.CustomSpinner
                    android:id="@+id/home_server_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_back_spinner_down"
                    android:clipToOutline="true"
                    android:dropDownWidth="match_parent"
                    android:ems="10"
                    android:hint="Auto"
                    android:inputType="text"
                    android:popupBackground="@drawable/spinner_background_up"
                    android:spinnerMode="dropdown"
                    android:state_pressed="true"
                    android:textColor="@color/primary"
                    android:textColorHint="@color/white" />
            </LinearLayout>

            <!-- Show error -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/home_error_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:text=""
                    android:textColor="@color/yellow" />
            </LinearLayout>

            <!-- Show error -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/current_sni_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/default_sni"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_bar_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
